--- a/problemSets/PS01/my_answers/PS01_SVU.tex
+++ b/problemSets/PS01/my_answers/PS01_SVU.tex
@@ -228,5 +228,10 @@ This plot seemed a little odd / underinformative to me, so I included all vote t
 	
 \end{enumerate}
 
+\newpage
+
+R scripts for visualizations:
+\lstinputlisting[language=R, firstline=112, lastline=207]{PS01_SVU.R} 
+
 
 \end{document}
