--- a/problemSets/PS01/my_answers/PS01_SVU.tex
+++ b/problemSets/PS01/my_answers/PS01_SVU.tex
@@ -203,7 +203,7 @@ We can see that EP groups are generally in the same areas as one another with re
 \end{figure}
 \newpage
 \vspace{10cm}
-This plot seemed a little odd / underinformative to me, so I included all vote types in the following plot as well:
+I included all vote types in the following plot as well:
 \vspace{3cm}
 
 \begin{figure}[h!]\centering
