--- a/problemSets/PS03/my_answers/PS03_SVU.tex
+++ b/problemSets/PS03/my_answers/PS03_SVU.tex
@@ -193,6 +193,12 @@ ces2015 <- ces2015 |> filter(discard == "Good quality")
 	\lstinputlisting[language=R, firstline=47, lastline=82]{PS03_SVU.R}
 
 
+\begin{figure}[h!]
+	\caption{Ideological Self-Placement by Party Affiliation with Custom Theme}\label{fig7}
+	\centering
+	\includegraphics[width=1\textwidth]{plot_2.4.pdf}
+\end{figure}
+
 
 \end{enumerate}
 
